--- a/project/.env
+++ b/project/.env
@@ -1,12 +1,13 @@
-SECRET_KEY=09d25642b7a9563b93f7099f6f0f4caa6ca657567dsa33423
+SECRET_KEY=secret
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=90
-EMAIL_PASSWORD=tuyv ujbs azih nxiz   
-EMAIL_USERNAME=mcinnie@gmail.com
+
+EMAIL_PASSWORD=password
+EMAIL_USERNAME=gmail
 EMAIL_PORT=587
 EMAIL_HOST=smtp.gmail.com
+
 REDIS_URL=redis://127.0.0.1:6379/
-REDIS_URL_CACHE=redis://127.0.0.1:6379/1
 
 DB_HOST=localhost
 DB_PORT=5050
